articles/articles.css
body{
	min-height: 100%;
	overflow-y: auto;
	overflow-x: hidden;
	height: unset !important;
}


main,article{
	margin-top: 15vh;
}




.screenpage{
	display: block;
	min-height: 100%;
}

.date{
	padding: 0px;
	color: #999;
	font-weight: 100;
	font-family: "dmsans";
	font-size: 1rem;
	margin: 0px;
	margin-bottom: 3rem;
}

.articleimage{
	max-width: 45rem;
    width: 75%;

    margin: auto;
    margin-top: 1.2rem;
	display: flex;
    flex-direction: column;
    text-align: center;
}

.articleimage img{
    box-shadow: 0px .1rem 1rem #272a2a;
    border-radius: .2rem;
	width: 100%;
	height: auto;
}

.articleimage figcaption{
	font-size: 1rem;
	color: #777;
	font-family: "dmsans";
	font-weight: 100;
	margin-top: .35rem;
	margin-bottom: 1.2rem;
}


.desc{
	line-height: 151%;
}

.jumper{
	margin-bottom: 3rem;
}

footer{
	max-width: 94%;
	text-align: center;
}

.hundred{
	justify-content: flex-start;
}

p a{
	color: #0fd;
}

.daymode p a{
	color: #0ad;
	filter: invert(100%);

}

pre{
	padding: .5rem;
	border: 1px solid #777;
	border-radius: .6rem;
}

